<resources>
    <string name="app_name">FinanceX</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="financex_wallet">FinanceX Wallet</string>
    <string name="ugx_balance">UGX Balance</string>
    <string name="ugx_amount_text">2000.00</string>
    <string name="usd_amount_string">USD 0.56</string>
    <string name="receive">Receive</string>
    <string name="send">Send</string>
    <string name="today">Today</string>
</resources>