<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/wallet_card"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/wallet_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/financex_wallet"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/deposit_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/primaryLightColor"
                android:src="@drawable/ic_add"
                android:tint="@color/primaryColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ugx_balance_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/ugx_balance"
                android:textColor="@color/primaryLightColor"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wallet_title" />

            <TextView
                android:id="@+id/ug_amount_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ugx_amount_text"
                android:textColor="@color/secondaryTextColor"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ugx_balance_id" />

            <TextView
                android:id="@+id/usd_amount_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/usd_amount_string"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/ug_amount_id"
                app:layout_constraintStart_toStartOf="@+id/ug_amount_id"
                app:layout_constraintTop_toBottomOf="@+id/ug_amount_id" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/send_button_card"
        android:layout_width="140dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintStart_toStartOf="@+id/wallet_card"
        app:layout_constraintTop_toBottomOf="@id/wallet_card" >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/send_button_icon_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_up"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/send_button_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:textSize="16sp"
                android:textColor="@color/primaryDarkColor"
                app:layout_constraintStart_toEndOf="@+id/send_button_icon_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                 />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/recieve_button_card"
        android:layout_width="140dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintEnd_toEndOf="@+id/wallet_card"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/send_button_card"
        app:layout_constraintTop_toBottomOf="@id/wallet_card" >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <ImageView
        android:id="@+id/transaction_icon_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_down"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/receive_button_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receive"
        android:textSize="16sp"
        android:textColor="@color/primaryDarkColor"
        app:layout_constraintStart_toEndOf="@+id/transaction_icon_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <TextView
        android:id="@+id/today_title_id"
        android:text="@string/today"
        android:textColor="@color/primaryTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/send_button_card"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/send_button_card"
        app:layout_constraintEnd_toEndOf="@id/recieve_button_card"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/transactions_recyclerview_id"
        android:layout_width="0dp"
        android:layout_height="140dp"
        app:layout_constraintTop_toBottomOf="@+id/today_title_id"
        app:layout_constraintStart_toStartOf="@id/send_button_card"
        app:layout_constraintEnd_toEndOf="@id/recieve_button_card"
        android:layout_marginTop="16dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>